human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_19.wast
(assert_invalid
  (module (func $type-cond-num-vs-i32
    (block (br_if 0 (i64.const 0)))
  ))
  "type mismatch"
)